tests/error/invalid_array_shift.gw
#! [contains] array depths do not match
var int[2][2] i;
i << 2;
